--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -209,3 +209,20 @@ hr {
 #times h2 {
     color: #fafafa;
 }
+
+/* footer */
+
+.social-networks {
+    text-align: center;
+}
+
+.social-networks li {
+    display: inline;
+}
+
+.social-networks i {
+    font-size: 150%;
+    margin: 1%;
+    padding: 5%;
+    color: #3a3a3a;
+}
