--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -238,3 +238,35 @@ hr {
 #photos > img {
     width: 100%;
 }
+
+/* media queries */
+
+/* for larger to meium screen size from 1200px and down */
+
+
+@media screen and (max-width: 1200px) {
+    #club-ethos {
+        width: 65%;
+        height: 1200px;
+        margin: 0  auto;
+    }
+    #welcome {
+        padding: 30px 0;
+        margin: 0;
+    }
+    #left-about, #right-about {
+        width: 100%;
+        float: left;
+        padding: 0;
+    }
+
+    #center-about {
+        clear: both;
+        width: 100%;
+        float: left;
+        padding: 0;
+    }
+    hr {
+        display: none;
+    }
+}
