--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -266,6 +266,14 @@ hr {
         float: left;
         padding: 0;
     }
+
+    #times > div {
+        width: 100%;
+        clear: both;
+        height: 150px;
+        padding: 0;
+    }
+    
     hr {
         display: none;
     }
