--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -273,7 +273,7 @@ hr {
         height: 150px;
         padding: 0;
     }
-    
+
     hr {
         display: none;
     }
@@ -312,5 +312,13 @@ hr {
         text-align: center;
         padding: 0 20px;
     }
-
+    #photos {
+        column-count: 3;
+    }
+    
+}
+@media screen and (max-width:800px) {
+    #photos {
+        column-count: 2;
+    }
 }
